# apis/get.go
@@ -1,8 +1,11 @@
 package apis
 
 import (
+	"encoding/json"
 	"errors"
+	"log"
 	"net/http"
+	"strconv"
 
 	"github.com/serjbibox/FSTR/daos"
 	"github.com/serjbibox/FSTR/services"
@@ -16,19 +19,24 @@ const (
 	statusMode
 )
 
-// @Summary   Получает запись из pereval_added по ID записи
-// @Tags /submitData/:id
-// @Produce   json
-// @Success   200  {object}  apis.Response
-// @Failure   400  {object}  apis.ErrResponse
-// @Failure   503  {object}  apis.ErrResponse
-// @Router    /submitData/:id [get]
+// @Summary  Получает запись из pereval_added по ID записи
+// @Tags         /submitData/{id}
+// @Produce      json
+// @Param    id   path      int  true  "pereval_added PRIMARY KEY ID"
+// @Success  200  {object}  apis.PassResponse
+// @Failure  400  {object}  apis.ErrResponse
+// @Failure  503  {object}  apis.ErrResponse
+// @Router   /submitData/{id} [get]
 func GetPass(w http.ResponseWriter, r *http.Request) {
 	if id, ok := r.Context().Value("id").(string); !ok {
 		err := errors.New("ошибка контекста GetPass")
 		SendErr(w, http.StatusServiceUnavailable, err)
 		return
 	} else {
+		if _, err := strconv.Atoi(id); err != nil {
+			SendErr(w, http.StatusServiceUnavailable, err)
+			return
+		}
 		s := services.New(daos.NewPassDAO())
 		f := services.NewFlow()
 		f.ID = id
@@ -37,18 +45,30 @@ func GetPass(w http.ResponseWriter, r *http.Request) {
 			SendErr(w, http.StatusServiceUnavailable, f.Err)
 			return
 		} else {
-			SendHttp(w, PassResponse{Pass: f.Pass})
+			SendHttp(w, PassResponse{PassLoaded: f.PassLoaded})
 		}
 	}
 
 }
 
+// @Summary  Получает записи из pereval_added по ID записи
+// @Tags     /submitData/{id}/status
+// @Produce  json
+// @Param    id   path      int  true  "pereval_added PRIMARY KEY ID"
+// @Success  200  {object}  apis.StatusResponse
+// @Failure  400  {object}  apis.ErrResponse
+// @Failure  503  {object}  apis.ErrResponse
+// @Router   /submitData/{id}/status [get]
 func GetStatus(w http.ResponseWriter, r *http.Request) {
 	if id, ok := r.Context().Value("id").(string); !ok {
 		err := errors.New("ошибка контекста GetPass")
 		SendErr(w, http.StatusServiceUnavailable, err)
 		return
 	} else {
+		if _, err := strconv.Atoi(id); err != nil {
+			SendErr(w, http.StatusServiceUnavailable, err)
+			return
+		}
 		s := services.New(daos.NewPassDAO())
 		f := services.NewFlow()
 		f.ID = id
@@ -64,30 +84,46 @@ func GetStatus(w http.ResponseWriter, r *http.Request) {
 	}
 }
 
+// @Summary      список всех данных для отображения, которые этот пользователь отправил на сервер через приложение с возможностью фильтрации по данным пользователя (ФИО, телефон, почта), если передан объект.
+// @Description  К сожалению, Swagger считает, что у GET запроса не должно быть тела. Можно проверить этот запрос, например, в Postman.
+// @Tags     /submitData/
+// @Accept       json
+// @Produce  json
+// @Param        email  body      apis.QueryParam  false  "Фильтровать по email"  Format(email)
+// @Success      200    {object}  apis.PassArrayResponse
+// @Failure      400    {object}  apis.ErrResponse
+// @Failure      503    {object}  apis.ErrResponse
+// @Router       /submitData/ [get]
 func ListPass(w http.ResponseWriter, r *http.Request) {
+
+	q := QueryParam{}
 	s := services.New(daos.NewPassDAO())
 	f := services.NewFlow()
+	if err := json.NewDecoder(r.Body).Decode(&q); err != nil {
+		SendErr(w, http.StatusServiceUnavailable, err)
+	}
+	log.Println(q.Email, q.Phone)
 	switch {
-	case r.URL.Query().Get("email") != "":
-		f.GetBy = r.URL.Query().Get("email")
+	case q.Email != "":
+		f.GetBy = q.Email
 		f.GetWith = mailMode
-	case r.URL.Query().Get("phone") != "":
-		f.GetBy = r.URL.Query().Get("phone")
+	case q.Phone != "":
+		f.GetBy = q.Phone
 		f.GetWith = phoneMode
-	case r.URL.Query().Get("fam") != "":
-		f.GetByFIO[0] = r.URL.Query().Get("fam")
-		if r.URL.Query().Get("name") == "" {
+	case q.Fam != "":
+		f.GetByFIO[0] = q.Fam
+		if q.Name == "" {
 			err := errors.New("ошибка, отсутствует параметр \"name\"")
 			SendErr(w, http.StatusServiceUnavailable, err)
 			return
 		}
-		f.GetByFIO[1] = r.URL.Query().Get("name")
-		if r.URL.Query().Get("otc") == "" {
+		f.GetByFIO[1] = q.Name
+		if q.Otc == "" {
 			err := errors.New("ошибка, отсутствует параметр \"otc\"")
 			SendErr(w, http.StatusServiceUnavailable, err)
 			return
 		}
-		f.GetByFIO[2] = r.URL.Query().Get("otc")
+		f.GetByFIO[2] = q.Otc
 		f.GetWith = fioMode
 	default:
 		err := errors.New("ошибка, отсутствует параметр")
