# apis/post.go
@@ -7,17 +7,15 @@ import (
 	"github.com/serjbibox/FSTR/services"
 )
 
-// submitData godoc
-// @Summary   Создаёт новую запись в pereval_added
-// @Tags /submitData
-// @Accept    json
-// @Produce   json
-// @Param     input	body	models.Pereval true "карточка объекта"
-// @Param     output	body	apis.Response true "ID созданной записи"
-// @Success   200  {object}  apis.Response
-// @Failure   400  {object}  apis.ErrResponse
-// @Failure   503  {object}  apis.ErrResponse
-// @Router    /submitData [post]
+// @Summary  Создаёт новую запись в pereval_added
+// @Tags     /submitData
+// @Accept   json
+// @Produce  json
+// @Param    input  body      models.Pass  true  "карточка объекта"
+// @Success  200    {object}  apis.InsertResponse
+// @Failure  400    {object}  apis.ErrResponse
+// @Failure  503    {object}  apis.ErrResponse
+// @Router   /submitData [post]
 func Insert(w http.ResponseWriter, r *http.Request) {
 	s := services.New(daos.NewPassDAO())
 	f := services.NewFlow()
